# eye_breaker

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md  app.rc  config.json
.github/workflows/: release.yml
assets/: lang_en.txt  lang_zh.txt
src/: main.cpp
